--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "tap-spec": "^4.1.1",
     "ts-node": "^0.9.3",
     "tslint": "^3.13.0",
-    "tslint-config-unional": "^0.3.0",
+    "tslint-config-unional": "^0.3.1",
     "typescript": "^2.1.0-dev.20160712",
     "typings": "^1.3.1"
   },
-  "dependencies": {
+  "peerDependencies": {
     "ava": "^0.15.2"
   }
 }
