--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc -d -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.build.json",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "rimraf dist && tsc && ava \"dist/**/*.spec.js\"",
     "watch": "node scripts/watch.js",
     "verify": "npm run build && npm -s run test+lint",
     "build+test": "npm run build && npm test",
     "test+lint": "npm test && npm run lint",
-    "preversion": "npm run verify",
-    "prepublish": "typings install"
+    "preversion": "npm run verify"
   },
   "license": "MIT",
   "keywords": [
@@ -41,10 +40,10 @@
     "ts-node": "^0.9.3",
     "tslint": "^3.13.0",
     "tslint-config-unional": "^0.3.1",
-    "typescript": "^2.1.0-dev.20160712",
+    "typescript": "1.8.10",
     "typings": "^1.3.1"
   },
   "peerDependencies": {
-    "ava": "^0.15.2"
+    "ava": ">0.15.0"
   }
 }
