--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "ava-fixture",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Write fixture tests with ava",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist/",
-    "typings.json",
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc -d -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.build.json",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "rimraf dist && tsc && ava \"dist/**/*.spec.js\"",
     "watch": "node scripts/watch.js",
@@ -41,10 +40,10 @@
     "ts-node": "^0.9.3",
     "tslint": "^3.13.0",
     "tslint-config-unional": "^0.3.1",
-    "typescript": "^2.1.0-dev.20160712",
+    "typescript": "^2.0.0",
     "typings": "^1.3.1"
   },
   "peerDependencies": {
-    "ava": "^0.15.2"
+    "ava": ">0.15.0"
   }
 }
