--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "homepage": "https://github.com/unional/ava-fixture",
   "devDependencies": {
     "ava": "^0.15.2",
+    "bluebird": "^3.4.1",
     "onchange": "^2.5.0",
     "rimraf": "^2.5.3",
     "tap-spec": "^4.1.1",
