Update to ava 0.16 (#3)
* Update to ava 0.16
Update scripts
Update tsconfig

* Chagne peer dep

to just support 0.16 to avoid breakage on typings

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -8,6 +8,9 @@
     "baseUrl": ".",
     "declaration": true,
     "inlineSources": true,
+    "lib": [
+      "es2015"
+    ],
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
@@ -16,9 +19,10 @@
     "rootDir": "src",
     "outDir": "dist",
     "sourceMap": true,
-    "target": "es2015"
+    "strictNullChecks": true,
+    "target": "es5"
   },
-  "files": [
+  "include": [
     "src/index.ts",
     "typings/index.d.ts"
   ]
