--- a/package.json
+++ b/package.json
@@ -14,15 +14,14 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "rimraf dist && tsc -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.build.json",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "rimraf dist && tsc && ava \"dist/**/*.spec.js\"",
-    "watch": "node scripts/watch.js",
-    "verify": "npm -s run test+lint",
-    "build+test": "npm run build && npm test",
-    "test+lint": "npm test && npm run lint",
+    "watch": "rimraf dist && node scripts/watch.js dist/**/*.spec.js",
+    "verify": "npm run test && npm run lint && npm run dependency-check && npm run build",
+    "dependency-check": "dependency-check . --unused --no-dev && dependency-check . --missing --no-dev",
     "preversion": "npm run verify",
-    "prepublish": "typings install && npm run build"
+    "prepublish": "typings install && rimraf dist && npm run build"
   },
   "license": "MIT",
   "keywords": [
@@ -38,18 +37,19 @@
   },
   "homepage": "https://github.com/unional/ava-fixture",
   "devDependencies": {
-    "ava": "^0.15.2",
+    "ava": "0.16.0",
     "bluebird": "^3.4.1",
+    "dependency-check": "^2.6.0",
     "onchange": "^2.5.0",
     "rimraf": "^2.5.3",
     "tap-spec": "^4.1.1",
-    "ts-node": "^0.9.3",
+    "ts-node": "1.2.2",
     "tslint": "^3.13.0",
-    "tslint-config-unional": "^0.3.1",
+    "tslint-config-unional": "0.4.3",
     "typescript": "^2.0.0",
     "typings": "^1.3.1"
   },
   "peerDependencies": {
-    "ava": ">0.15.0"
+    "ava": "^0.16.0"
   }
 }
