--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -15,7 +15,7 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "newLine": "LF",
-    "removeComments": true,
+    "removeComments": false,
     "rootDir": "src",
     "outDir": "dist",
     "sourceMap": true,
