--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
   "json.schemas": [
     {
       "fileMatch": [
-        "tsconfig.build.json"
+        "tsconfig.*.json"
       ],
       "url": "http://json.schemastore.org/tsconfig"
     }
