--- a/package.json
+++ b/package.json
@@ -1,55 +1,82 @@
 {
   "name": "ava-fixture",
-  "version": "0.3.1",
   "description": "Write fixture tests with ava",
-  "author": {
-    "name": "Homa Wong",
-    "email": "homawong@gmail.com",
-    "url": "http://github.com/unional"
-  },
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "version": "0.3.1",
+  "main": "dist/commonjs/index.js",
+  "typings": "dist/commonjs/index.d.ts",
   "files": [
-    "dist/",
-    "LICENSE"
+    "dist"
   ],
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
-    "lint": "tslint \"src/**/*.ts\"",
-    "test": "rimraf dist && tsc && ava \"dist/**/*.spec.js\"",
-    "watch": "rimraf dist && node scripts/watch.js dist/**/*.spec.js",
-    "verify": "npm run test && npm run lint && npm run dependency-check && npm run build",
+    "build": "npm run clean && npm run build-commonjs",
+    "build-commonjs": "tsc -p tsconfig.commonjs.json",
+    "clean": "rimraf dist",
+    "coverage": "npm test && nyc check-coverage --branches 85 --functions 85 --lines 85",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "dependency-check": "dependency-check . --unused --no-dev && dependency-check . --missing --no-dev",
-    "preversion": "npm run verify",
-    "prepublish": "typings install && rimraf dist && npm run build"
+    "lint": "tslint \"src/**/*.ts\"",
+    "postpublish": "git push",
+    "prepare": "typings install && npm run build",
+    "preversion": "git pull && npm run verify",
+    "test": "npm run clean && tsc && nyc ava",
+    "verify": "npm run lint && npm run coverage && npm run build && npm run dependency-check",
+    "watch": "npm run clean && node scripts/watch.js"
+  },
+  "author": {
+    "name": "Homa Wong",
+    "email": "homawong@gmail.com"
+  },
+  "homepage": "https://github.com/unional/ava-fixture",
+  "bugs": {
+    "url": "https://github.com/unional/ava-fixture/issues"
   },
   "license": "MIT",
   "keywords": [
     "ava",
     "fixture"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/unional/ava-fixture.git"
+  "ava": {
+    "files": [
+      "dist/spec/**/*.spec.js"
+    ],
+    "source": [
+      "scripts/*.js",
+      "dist/spec/**/*.js",
+      "*.json"
+    ],
+    "require": [
+      "./scripts/setup-browser-env.js",
+      "./scripts/setup-test-env.js"
+    ]
   },
-  "bugs": {
-    "url": "https://github.com/unional/ava-fixture/issues"
-  },
-  "homepage": "https://github.com/unional/ava-fixture",
-  "devDependencies": {
-    "ava": "0.17.0",
-    "bluebird": "^3.4.1",
-    "dependency-check": "^2.6.0",
-    "onchange": "^3.2.0",
-    "rimraf": "^2.5.3",
-    "tap-spec": "^4.1.1",
-    "ts-node": "^1.7.2",
-    "tslint": "^4.0.2",
-    "tslint-config-unional": "0.6.0",
-    "typescript": "^2.0.0",
-    "typings": "^2.0.0"
+  "nyc": {
+    "exclude": [
+      "scripts",
+      "**/*.spec.*",
+      "**/fixtures/**/*"
+    ]
   },
   "peerDependencies": {
     "ava": ">=0.17.0"
+  },
+  "devDependencies": {
+    "aurelia-logging-color": "^0.2.0",
+    "aurelia-polyfills": "^1.1.1",
+    "ava": "^0.17.0",
+    "bluebird": "^3.4.7",
+    "browser-env": "^2.0.19",
+    "core-js": "^2.4.1",
+    "dependency-check": "^2.7.0",
+    "eslint": "^3.13.0",
+    "eslint-config-unional": "^0.2.3",
+    "nyc": "^10.0.0",
+    "rimraf": "^2.5.4",
+    "tslint": "^4.3.1",
+    "tslint-config-unional": "^0.6.0",
+    "typescript": "^2.1.4",
+    "typings": "^2.1.0"
+  },
+  "dependencies": {
+    "aurelia-logging": "^1.2.0"
   }
 }
