--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,15 @@
 {
+  "extends": "./tsconfig.base.json",
+  "compilerOptions": {
+    "outDir": "dist/spec"
+  },
   "atom": {
     "rewriteTsconfig": false
   },
   "buildOnSave": false,
   "compileOnSave": false,
-  "compilerOptions": {
-    "declaration": true,
-    "inlineSources": true,
-    "lib": [
-      "es2015"
-    ],
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "noImplicitAny": true,
-    "newLine": "LF",
-    "removeComments": true,
-    "rootDir": "src",
-    "outDir": "dist",
-    "sourceMap": true,
-    "target": "es5"
-  },
-  "exclude": [
-    "fixtures",
-    "node_modules"
+  "include": [
+    "src/**/*",
+    "typings/index.d.ts"
   ]
 }
