--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean": "rimraf dist",
     "coverage": "npm test && nyc check-coverage --branches 85 --functions 85 --lines 85",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "dependency-check": "dependency-check . --unused --no-dev && dependency-check . --missing --no-dev",
+    "dependency-check": "dependency-check . --unused --no-dev -i ava && dependency-check . --missing --no-dev",
     "lint": "tslint \"src/**/*.ts\"",
     "postpublish": "git push",
     "prepare": "typings install && npm run build",
@@ -65,6 +65,7 @@
   },
   "devDependencies": {
     "@types/node": "^6.0.58",
+    "aurelia-logging": "^1.2.0",
     "aurelia-logging-color": "^0.2.0",
     "aurelia-polyfills": "^1.1.1",
     "ava": "^0.17.0",
@@ -80,8 +81,5 @@
     "tslint-config-unional": "^0.6.0",
     "typescript": "^2.1.4",
     "typings": "^2.1.0"
-  },
-  "dependencies": {
-    "aurelia-logging": "^1.2.0"
   }
 }
