--- a/package.json
+++ b/package.json
@@ -61,9 +61,11 @@
     ]
   },
   "peerDependencies": {
+    "aurelia-logging": "^1.2.0",
     "ava": ">=0.17.0"
   },
   "devDependencies": {
+    "@types/mkdirp": "^0.3.29",
     "@types/node": "^6.0.58",
     "aurelia-logging": "^1.2.0",
     "aurelia-logging-color": "^0.2.0",
@@ -75,11 +77,15 @@
     "dependency-check": "^2.7.0",
     "eslint": "^3.13.0",
     "eslint-config-unional": "^0.2.3",
+    "mkdirp": "^0.5.1",
     "nyc": "^10.0.0",
     "rimraf": "^2.5.4",
     "tslint": "^4.3.1",
     "tslint-config-unional": "^0.6.0",
     "typescript": "^2.1.4",
     "typings": "^2.1.0"
+  },
+  "dependencies": {
+    "dir-compare": "^1.3.0"
   }
 }
