--- a/package.json
+++ b/package.json
@@ -2,25 +2,32 @@
   "name": "ava-fixture",
   "description": "Write fixture tests with ava",
   "version": "0.7.0",
-  "main": "dist/commonjs/index.js",
-  "typings": "dist/commonjs/index.d.ts",
+  "main": "dist/es5/index.js",
+  "module": "dist/es2015/index.js",
+  "typings": "dist/es5/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "npm run clean && npm run build-commonjs",
-    "build-commonjs": "tsc -p tsconfig.commonjs.json",
+    "build": "npm run clean && npm run build-es5 && npm run build-es2015",
+    "build-es5": "tsc -p tsconfig.es5.json",
+    "build-es2015": "tsc -p tsconfig.es2015.json",
+    "_bundle": "npm run bundle-rollup && npm run bundle-webpack",
+    "_bundle-rollup": "rollup --config rollup.config.es2015.js",
+    "_bundle-webpack": "webpack --config webpack.config.es5.js",
     "clean": "rimraf dist",
-    "coverage": "npm test && nyc check-coverage --branches 85 --functions 85 --lines 85",
+    "coverage": "nyc --check-coverage --branches 85 --functions 85 --lines 85 npm test",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "demo": "node scripts/demo.js",
     "dependency-check": "dependency-check . --unused --no-dev -i ava && dependency-check . --missing --no-dev",
     "lint": "tslint \"src/**/*.ts\"",
     "postpublish": "git push",
-    "prepare": "typings install && npm run build",
+    "prepare": "npm run build",
     "preversion": "git pull && npm run verify",
-    "test": "npm run clean && tsc && nyc ava",
+    "_preversion": "git pull && npm run verify && git add -f dist/ava-fixture*",
+    "test": "rimraf dist-spec && tsc && ava",
     "verify": "npm run lint && npm run coverage && npm run build && npm run dependency-check",
-    "watch": "npm run clean && node scripts/watch.js"
+    "watch": "rimraf dist-spec && node scripts/watch.js"
   },
   "author": {
     "name": "Homa Wong",
@@ -41,11 +48,11 @@
   ],
   "ava": {
     "files": [
-      "dist/spec/**/*.spec.js"
+      "dist-spec/**/*.spec.js"
     ],
     "source": [
       "scripts/*.js",
-      "dist/spec/**/*.js",
+      "dist-spec/**/*.js",
       "*.json"
     ],
     "require": [
@@ -58,33 +65,44 @@
       "scripts",
       "**/*.spec.*",
       "**/fixtures/**/*",
-      "dist/spec/interfaces.js"
+      "dist-spec/interfaces.js"
     ]
   },
   "peerDependencies": {
-    "aurelia-logging": "^1.2.0",
+    "aurelia-logging": ">=1.2.0",
     "ava": ">=0.17.0"
   },
   "devDependencies": {
     "@types/mkdirp": "^0.3.29",
     "@types/node": "^6.0.58",
     "aurelia-logging": "^1.2.0",
-    "aurelia-logging-color": "^0.4.8",
+    "aurelia-logging-color": "^0.4.10",
     "aurelia-polyfills": "^1.1.1",
     "ava": "^0.17.0",
     "bluebird": "^3.4.7",
     "browser-env": "^2.0.19",
     "core-js": "^2.4.1",
     "dependency-check": "^2.7.0",
-    "eslint": "^3.13.0",
+    "eslint": "^3.13.1",
     "eslint-config-unional": "^0.2.3",
     "mkdirp": "^0.5.1",
     "nyc": "^10.0.0",
+    "param-case": "^2.1.0",
+    "pascal-case": "^2.0.0",
     "rimraf": "^2.5.4",
+    "rollup": "^0.41.4",
+    "rollup-plugin-commonjs": "^7.0.0",
+    "rollup-plugin-node-builtins": "^2.0.0",
+    "rollup-plugin-node-globals": "^1.1.0",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-sourcemaps": "^0.4.1",
+    "rollup-plugin-uglify": "^1.0.1",
+    "source-map-loader": "^0.1.6",
     "tslint": "^4.3.1",
     "tslint-config-unional": "^0.6.0",
-    "typescript": "^2.1.4",
-    "typings": "^2.1.0"
+    "typescript": "^2.1.5",
+    "uglify-js": "github:mishoo/UglifyJS2#harmony",
+    "webpack": "^2.2.0-rc.4"
   },
   "dependencies": {
     "dir-compare": "^1.3.0"
