--- a/package.json
+++ b/package.json
@@ -12,19 +12,15 @@
     "build": "npm run clean && npm run build-es5 && npm run build-es2015",
     "build-es5": "tsc -p tsconfig.es5.json",
     "build-es2015": "tsc -p tsconfig.es2015.json",
-    "_bundle": "npm run bundle-rollup && npm run bundle-webpack",
-    "_bundle-rollup": "rollup --config rollup.config.es2015.js",
-    "_bundle-webpack": "webpack --config webpack.config.es5.js",
     "clean": "rimraf dist",
     "coverage": "nyc --check-coverage --branches 85 --functions 85 --lines 85 npm test",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "demo": "node scripts/demo.js",
     "dependency-check": "dependency-check . --unused --no-dev -i ava && dependency-check . --missing --no-dev",
-    "lint": "tslint \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json --type-check \"src/**/*.ts\"",
     "postpublish": "git push",
     "prepare": "npm run build",
     "preversion": "git pull && npm run verify",
-    "_preversion": "git pull && npm run verify && git add -f dist/ava-fixture*",
     "test": "rimraf dist-spec && tsc && ava",
     "verify": "npm run lint && npm run coverage && npm run build && npm run dependency-check",
     "watch": "rimraf dist-spec && node scripts/watch.js"
@@ -74,38 +70,26 @@
   },
   "devDependencies": {
     "@types/mkdirp": "^0.3.29",
-    "@types/node": "^8.0.0",
-    "assert-order": "^2.2.5",
-    "aurelia-logging": "^1.2.0",
-    "aurelia-logging-color": "^0.5.1",
-    "aurelia-polyfills": "^1.1.1",
-    "ava": "^0.17.0",
-    "bluebird": "^3.4.7",
-    "browser-env": "^2.0.19",
+    "@types/node": "^8.0.4",
+    "assert-order": "^2.3.1",
+    "aurelia-logging": "^1.3.1",
+    "aurelia-logging-color": "^0.5.5",
+    "aurelia-polyfills": "^1.2.1",
+    "ava": "^0.19.1",
+    "bluebird": "^3.5.0",
+    "browser-env": "^2.0.31",
     "core-js": "^2.4.1",
-    "dependency-check": "^2.7.0",
-    "eslint": "^4.1.0",
+    "dependency-check": "^2.9.1",
+    "eslint": "^4.1.1",
     "eslint-config-unional": "^0.2.3",
     "mkdirp": "^0.5.1",
-    "nyc": "^11.0.0",
-    "param-case": "^2.1.0",
-    "pascal-case": "^2.0.0",
-    "rimraf": "^2.5.4",
-    "rollup": "^0.42.0",
-    "rollup-plugin-commonjs": "^8.0.0",
-    "rollup-plugin-node-builtins": "^2.0.0",
-    "rollup-plugin-node-globals": "^1.1.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-sourcemaps": "^0.4.1",
-    "rollup-plugin-uglify": "^2.0.0",
-    "source-map-loader": "^0.2.1",
-    "tslint": "^5.0.0",
+    "nyc": "^11.0.3",
+    "rimraf": "^2.6.1",
+    "tslint": "^5.4.3",
     "tslint-config-unional": "^0.8.0",
-    "typescript": "^2.1.5",
-    "uglify-js": "github:mishoo/UglifyJS2#harmony",
-    "webpack": "^2.2.0-rc.4"
+    "typescript": "^2.4.1"
   },
   "dependencies": {
-    "dir-compare": "^1.3.0"
+    "dir-compare": "^1.4.0"
   }
 }
