--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.base.json",
+  "extends": "./tsconfig.es5.json",
   "compilerOptions": {
     "outDir": "dist-spec"
   },
