--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "demo": "node scripts/demo.js",
     "dependency-check": "dependency-check . --unused --no-dev -i ava && dependency-check . --missing --no-dev",
-    "lint": "tslint -p tsconfig.json --type-check \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json 'src/**/*.ts'",
     "postpublish": "git push",
     "prepare": "npm run build",
     "preversion": "git pull && npm run verify",
@@ -71,7 +71,7 @@
   "devDependencies": {
     "@types/mkdirp": "^0.5.0",
     "@types/node": "^8.0.15",
-    "assert-order": "^2.3.1",
+    "assert-order": "^3.0.0",
     "aurelia-logging": "^1.3.1",
     "aurelia-logging-color": "^0.5.5",
     "aurelia-polyfills": "^1.2.2",
