fix: for node 14 (#83)
BREAKING CHANGE: remove module support
This is a test tool. No need to support dual package.
Project is updated to use some newer tools.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,17 @@
 {
-  "extends": "unional",
-  "root": true,
   "env": {
-    "node": true,
-    "es6": true
+    "es6": true,
+    "node": true
   },
-  "rules": {
-    "func-names": 0,
-    "no-console": [
-      0
-    ]
-  }
+  "extends": "plugin:harmony/latest",
+  "overrides": [
+    {
+      "extends": "plugin:harmony/ts-recommended",
+      "files": [
+        "*.ts",
+        "*.tsx"
+      ]
+    }
+  ],
+  "root": true
 }
